--- a/css/global.css
+++ b/css/global.css
@@ -1,40 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
-@media only screen and (max-width: 600px) {
-  .footer {
-    background: #353535;
-    margin-top: 40px;
-  }
-  .footer .logo {
-    font-family: "Shrikhand", cursive;
-    padding-top: 20px;
-    padding-left: 25px;
-    font-size: 20px;
-    color: white;
-  }
+.footer {
+  background: #353535;
+  margin-top: 40px;
+}
+
+.footer .logo {
+  font-family: "Shrikhand", cursive;
+  padding-top: 20px;
+  padding-left: 25px;
+  font-size: 20px;
+  color: white;
+}
+
+.footer .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-weight: 300;
+  margin-left: 25px;
+  margin-top: 15px;
+}
+
+.footer .navigation .text {
+  padding: 6px;
+  margin: 0;
+  font-size: 15px;
+}
+
+.footer .navigation i {
+  margin-right: 10px;
+}
+
+.footer .navigation a {
+  color: white;
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 601px) {
   .footer .navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    font-weight: 300;
-    margin-left: 25px;
-    margin-top: 15px;
-  }
-  .footer .navigation .text {
-    padding: 6px;
-    margin: 0;
-    font-size: 15px;
-  }
-  .footer .navigation i {
-    margin-right: 10px;
-  }
-  .footer .navigation a {
-    color: white;
-    text-decoration: none;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding-bottom: 20px;
   }
 }
 
