feat(front-end): animation

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -60,6 +60,26 @@ body {
     }
 }
 
+@keyframes fade-in-bottom {
+    0% {
+        transform: translateY(5px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+$menu-item: 9;
+
+@for $i from 1 through $menu-item {
+    .n-#{$i} {
+        animation: fade-in-bottom 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+        animation-delay: #{$i * 0.3}s;
+    }
+}
+
 .menu {
     background: white;
     top: -50px;
