--- a/css/home.css
+++ b/css/home.css
@@ -53,36 +53,6 @@
   }
 }
 
-@-webkit-keyframes heart-animation {
-  from {
-    fill: white;
-    stroke: black;
-  }
-  to {
-    stroke-width: 5;
-    stroke: black;
-    fill: #9356dc;
-  }
-}
-
-@keyframes heart-animation {
-  from {
-    fill: white;
-    stroke: black;
-  }
-  to {
-    stroke-width: 5;
-    stroke: black;
-    fill: #9356dc;
-  }
-}
-
-body {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-  background: #f6f6f6;
-}
-
 @-webkit-keyframes loading {
   0% {
     opacity: 1;
@@ -107,6 +77,110 @@ body {
     opacity: 0;
     visibility: hidden;
   }
+}
+
+@-webkit-keyframes heart-animation {
+  from {
+    fill: white;
+    stroke: black;
+  }
+  to {
+    stroke-width: 5;
+    stroke: black;
+    fill: #9356dc;
+  }
+}
+
+@keyframes heart-animation {
+  from {
+    fill: white;
+    stroke: black;
+  }
+  to {
+    stroke-width: 5;
+    stroke: black;
+    fill: #9356dc;
+  }
+}
+
+@-webkit-keyframes activate {
+  0% {
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes activate {
+  0% {
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(80deg);
+            transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(80deg);
+            transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@-webkit-keyframes fade-in-bottom {
+  0% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-bottom {
+  0% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background: #f6f6f6;
 }
 
 .loader {
