fix(front-end): w3c css validator

--- a/css/home.css
+++ b/css/home.css
@@ -448,8 +448,8 @@ body {
   .restaurant .list {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
 }
 /*# sourceMappingURL=home.css.map */
