--- a/css/home.scss
+++ b/css/home.scss
@@ -227,7 +227,7 @@ body {
         margin: 120px;
         .list {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr 1fr;
         }
     }
 }
