--- a/css/home.css
+++ b/css/home.css
@@ -80,26 +80,36 @@
 }
 
 @-webkit-keyframes heart-animation {
-  from {
+  0% {
     fill: white;
     stroke: black;
   }
-  to {
+  90% {
     stroke-width: 5;
     stroke: black;
-    fill: #9356dc;
+    fill: #ff79da;
+  }
+  100% {
+    stroke-width: 5;
+    stroke: black;
+    fill: url(#heart-gradient) #ff79da;
   }
 }
 
 @keyframes heart-animation {
-  from {
+  0% {
     fill: white;
     stroke: black;
   }
-  to {
+  90% {
     stroke-width: 5;
     stroke: black;
-    fill: #9356dc;
+    fill: #ff79da;
+  }
+  100% {
+    stroke-width: 5;
+    stroke: black;
+    fill: url(#heart-gradient) #ff79da;
   }
 }
 
@@ -131,23 +141,23 @@
 
 @-webkit-keyframes rotate {
   0% {
-    -webkit-transform: rotate(80deg);
-            transform: rotate(80deg);
-  }
-  100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
 @keyframes rotate {
   0% {
-    -webkit-transform: rotate(80deg);
-            transform: rotate(80deg);
-  }
-  100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
@@ -437,8 +447,8 @@ body {
 
 .restaurant .list .card .bottom .heart svg:hover {
   stroke: white;
-  -webkit-animation: heart-animation 1.5s forwards;
-          animation: heart-animation 1.5s forwards;
+  -webkit-animation: heart-animation 200ms forwards;
+          animation: heart-animation 200ms forwards;
 }
 
 @media only screen and (min-width: 601px) {
