--- a/css/home.scss
+++ b/css/home.scss
@@ -215,7 +215,7 @@ body {
 
                         &:hover {
                             stroke: white;
-                            animation: heart-animation 1.5s forwards;
+                            animation: heart-animation 200ms forwards;
                         }
                     }
                 }
