--- a/css/animation.css
+++ b/css/animation.css
@@ -37,7 +37,7 @@
   100% {
     stroke-width: 5;
     stroke: black;
-    fill: url(#heart-gradient) #ff79da;
+    fill: url("#heart-gradient-0") #ff79da;
   }
 }
 
@@ -54,7 +54,7 @@
   100% {
     stroke-width: 5;
     stroke: black;
-    fill: url(#heart-gradient) #ff79da;
+    fill: url("#heart-gradient-0") #ff79da;
   }
 }
 
